--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
-logging.pattern.file= %d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n
-logging.file.path=/
-logging.file.name= log.txt
+#logging.pattern.file= %d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n
+#logging.file.path=/
+#logging.file.name= log.txt
